--- a/style.css
+++ b/style.css
@@ -83,6 +83,145 @@ body {
     display:none;
 }
 
+/* Navbar search form */
+.navbar .search-form {
+    position:absolute;
+    top:100%;
+    right:7%;
+    background-color:#fff;
+    width:50rem;
+    height:5rem;
+    display:flex;
+    align-items:center;
+    transform:scaleY(0);
+    transform-origin:top;
+    transition:0.3s;
+}
+.navbar .search-form.active {
+    transform:scaleY(1);
+}
+.navbar .search-form input {
+    height:100%;
+    width:100%;
+    font-size:1.6rem;
+    color:var(--bg);
+    padding:1rem;
+}
+.navbar .search-form label {
+    cursor:pointer;
+    font-size:2rem;
+    margin-right:1.5rem;
+    color:var(--bg);
+}
+
+/* Shopping Cart */
+#shopping-cart-button {
+    position:relative;
+}
+#shopping-cart-button .quantity-badge {
+    display:inline-block;
+    padding:1px 5px;
+    background-color:red;
+    border-radius:6px;
+    font-size:0.8rem;
+    position:absolute;
+
+}
+.shopping-cart {
+    position:absolute;
+    top:100%;
+    right:-100%;
+    height:100vh;
+    width:35rem;
+    padding:0 1.5rem;
+    background-color:#fff;
+    color:var(--bg);
+    transition:0.3s linear;
+}
+.shopping-cart.active {
+    right:0;
+}
+.shopping-cart .cart-item {
+    margin:2rem 0;
+    display:flex;
+    align-items:center;
+    gap:1.5rem;
+    padding-bottom:1rem;
+    border-bottom:1px dashed #666;
+    position:relative;
+}
+.shopping-cart img {
+    height:4rem;
+    border-radius:50%;
+}
+.shopping-cart h3 {
+    font-size:1.4rem;
+}
+.shopping-cart .item-price {
+    font-size:1.2rem;
+}
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove {
+    display:inline-block;
+    padding:2px 5px;
+    cursor:pointer;
+    margin:0 8px;
+    background-color:black;
+    color:white;
+    font-weight:bold;
+    font-size:1.1rem;
+}
+.shopping-cart h4 {
+    font-size:1.6rem;
+    margin-top:-1rem;
+    text-align:center;
+}
+/* Checkout Form */
+.form-container {
+    width:100%;
+    display:flex;
+    justify-content:center;
+    border-top:1px dashed black;
+    margin-top:1rem;
+    padding:1rem;
+}
+.form-container h5 {
+    text-align:center;
+    font-size:1rem;
+}
+.form-container form {
+    width:100%;
+    text-align:center;
+}
+.form-container label {
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    margin:1rem 0;
+}
+.form-container span {
+    text-align:right;
+}
+.form-container input {
+    background-color:#ddd;
+    padding:5px;
+    font-size:1rem;
+    width:70%;
+}
+.form-container .checkout-button {
+    padding:6px 14px;
+    background-color:royalblue;
+    color:white;
+    font-weight:bold;
+    font-size:1rem;
+    border-radius:20px;
+    margin:1rem auto;
+    cursor:pointer;
+}
+.form-container .checkout-button.disabled {
+    background-color:#999;
+    cursor:not-allowed;
+}
 /* Hero Section */
 .hero {
     min-height:100vh;
@@ -93,9 +232,11 @@ body {
     background-size:cover;
     background-position:center;
     position:relative;
+    -webkit-mask-image:linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
+    mask-image:linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
 }
 
-.hero::after {
+/* .hero::after {
     content:'';
     display:block;
     position:absolute;
@@ -103,11 +244,15 @@ body {
     height:30%;
     bottom:0;
     background:linear-gradient(0deg,rgba(1,1,3,1) 8%, rgba(255,255,255,0) 50%);
-}
+} */
 
 .hero .content {
     padding:1.4rem 7%;
-    max-width:60rem;
+    /* max-width:60rem; */
+    width:100%;
+    text-align:center;
+    position:fixed;
+    top:150px;
 }
 .hero .content h1 {
     font-size:5em;
@@ -125,7 +270,7 @@ body {
     margin-top:1rem;
     line-height:1.4;
     font-weight:100;
-    text-shadow:1px 1px 3px rgba(1,1,3,0.5);
+    text-shadow:1px 1px 1px rgba(1,1,3,1);
     mix-blend-mode:difference;
 }
 
@@ -140,25 +285,29 @@ body {
 }
 
 /* About Section */
-.about, .menu, .contact {
+.about, .menu, .products .contact {
     padding:8rem 7% 1.4rem;
 }
-.about h2, .menu h2, .contact h2 {
+.about h2, .menu h2, .products h2, .contact h2 {
     text-align:center;
     font-size:2.6rem;
     margin-bottom:3rem;
 }
-.about h2 span, .menu h2 span, .contact h2 span {
+.about h2 span, .menu h2 span, .products h2 span, .contact h2 span {
     color:var(--primary);
 }
 .about .row {
     display:flex;
 }
-.about .row .about-img img {
+.about .row .about-img{
     flex:1 1 45rem;
 }
 .about .row .about-img img {
     width:100%;
+    -webkit-mask-image:url('img/menu/coffee\ beans.svg');
+    -webkit-mask-size:50%;
+    -webkit-mask-repeat:no-repeat;
+    -webkit-mask-position:center;
 }
 .about .row .content {
     flex:1 1 35rem;
@@ -202,7 +351,59 @@ body {
 .menu .row .menu-card .menu-card-title {
     margin:1rem auto 0.5rem;
 }
-
+/* Products Section */
+.products .row{
+    display:grid;
+    grid-template-columns:repeat(auto-fit, minmax(30rem,1fr));
+    gap:1.5rem;
+    margin-top:4rem;
+}
+.products .product-card {
+    text-align:center;
+    border:1px solid #666;
+    padding:2rem;
+}
+.products .product-icons {
+    display:flex;
+    justify-content:center;
+    gap:0.5rem;
+}
+.products .product-icons a {
+    width:4rem;
+    height:4rem;
+    color:#fff;
+    margin:0.3rem;
+    border:1px solid #666;
+    border-radius:50%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.products .product-icons a:hover {
+    background-color:var(--primary);
+    border:1px solid var(--primary);
+}
+.products .product-image {
+    padding:1rem 0;
+}
+.products .product-image img {
+    height:25rem;
+}
+.products .product-content h3 {
+    font-size:2rem;
+}
+.products .product-stars {
+    font-size:1.7rem;
+    padding:0.8rem;
+    color:var(--primary);
+}
+.products .product-stars .star-full {
+    fill:var(--primary);
+}
+.products .product-price {
+    font-size:1.3rem;
+    font-weight:bold;
+}
 /* Contact Section */
 .contact .row {
     display:flex;
@@ -276,6 +477,69 @@ footer .credit a {
     color:var(--bg);
     font-weight:700;
 }
+/* Modal box */
+
+/* Item detail */
+.modal {
+    display:flex;
+    position:fixed;
+    z-index:999;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    overflow:auto;
+    background-color:rgba(0,0,0,0.7);
+}
+.modal-container {
+    position:relative;
+    background-color: #fefefe;
+    color:var(--bg);
+    margin:15% auto;
+    padding:1.2rem;
+    border:1px solid #666;
+    width:80%;
+    animation:animateModal 0.5s;
+}
+/* Modal animation */
+@keyframes animateModal {
+    from {
+        top:-300px;
+        opacity:0;
+    }
+    to {
+        top:0;
+        opacity:1;
+    }
+}
+.modal-container .close-icon {
+    position:absolute;
+    right:1rem;
+}
+.modal-content {
+    display:flex;
+    flex-wrap:nowrap;
+}
+.modal-content img {
+    height:20rem;
+    margin-right:2rem;
+    margin-bottom:2rem;
+}
+.modal-content p {
+    font-size:1.2rem;
+    line-height:1.8rem;
+    margin-top:1.2rem;
+}
+.modal-content a {
+    display:flex;
+    gap:1rem;
+    width:12rem;
+    background-color:var(--primary);
+    color:#fff;
+    margin-top:1rem;
+    padding:1rem 1.6rem;
+}
+
 /* Media Queries */
 
 /* Laptop */
@@ -318,6 +582,10 @@ footer .credit a {
     .navbar .navbar-nav a:hover::after {
         transform:scaleX(0.2);
     }
+    .navbar .search-form {
+        width:90%;
+        right:2rem;
+    }
     .about .row {
         flex-wrap:wrap;
     }
@@ -347,6 +615,9 @@ footer .credit a {
      }
      .contact .row form {
         padding-top:0;
+     }
+     .modal-content {
+        flex-wrap:wrap;
      }
 }
 /* Mobile Phone */
